test/distinctname/fail/field.j
class A {
  Void main() { return; }
}

class B {
  Int a;
  Int a;
  String b;
}
